# cicada-songs

./: LICENSE  README.md  pyproject.toml
.notebooks/: 0-finding-periodicity.md
notebooks/: 0-finding-periodicity.ipynb
scripts/: convert.sh
